--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -32,7 +32,7 @@
                         {% 
                             featureImage
                             post.feature_image,
-                            (post.title | escape),
+                            (title | escape),
                             "(max-width: 800px) 400px,
                              (max-width: 1170px) 700px,
                              1400px",
@@ -78,31 +78,42 @@
 {% endblock %}
 
 {%- block seo -%}
-    <!--Twitter Card-->
-    <meta name="twitter:site" content="{{ site.twitter }}">
-    <meta name="twitter:creator" content="{{ post.primary_author.twitter }}">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="{{ site.url + post.path }}">
-    <meta name="twitter:title" content="{{ title }} – {{ site.title }}">
-    <meta name="twitter:description" content="{{ post.excerpt }}">
-    <meta name="twitter:image" content="{{ post.feature_image }}">
-
-    <!--Schema-->
-    <link rel="author" href="{{ post.primary_author.website }}">
-    <link rel="publisher" href="{{ site.url }}">
-    <meta itemprop="name" content="{{ title }} – {{ site.title }}">
-    <meta itemprop="description" content="{{ post.excerpt }}">
-    <meta itemprop="image" content="{{ post.feature_image }}">
+    <link rel="amphtml" href="{{ site.url + post.path + "amp/" }}">
 
     <!-- Facebook OpenGraph -->
-    <meta property="og:url" content="{{ site.url + post.path }}/">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="{{ title }} – {{ site.title }}">
-    <meta property="og:image" content="{{ post.feature_image }}">
+    <meta property="og:site_name" content="{{ orgName }}">
+    <meta property="og:type" content="article">
+    <meta property="og:title" content="{{ title }}">
     <meta property="og:description" content="{{ post.excerpt }}">
-    <meta property="og:site_name" content="{{ site.title }}">
-    <meta property="og:locale" content="{{ site.lang }}">
-    <meta property="article:author" content="{{ site.url }}">
+    <meta property="og:url" content="{{ site.url + post.path }}/">
+    <meta property="og:image" content="{{ post.feature_image }}">
+    <meta property="article:published_time" content="{{ post.published_at }}">
+    <meta property="article:modified_time" content="{{ post.updated_at }}">
+    {% for tag in post.tags %}
+        <meta property="article:tag" content="{{ tag.name }}">
+    {% endfor %}
+    <meta property="article:publisher" content="https://www.facebook.com/freecodecamp">
+    {% if post.primary_author.facebook %}
+        <meta property="article:author" content="{{ post.primary_author.facebook }}">
+    {% endif %}
+
+    <!--Twitter Card-->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="{{ title }}">
+    <meta name="twitter:description" content="{{ post.excerpt }}">
+    <meta name="twitter:url" content="{{ site.url + post.path }}">
+    <meta name="twitter:image" content="{{ post.feature_image }}">
+    <meta name="twitter:label1" content="Written by">
+    <meta name="twitter:data1" content="{{ post.primary_author.name }}">
+    <meta name="twitter:label2" content="Filed under">
+    <meta name="twitter:data2" content="{{ post.tags | join(", ", "name") }}">
+    <meta name="twitter:site" content="{{ site.twitter }}">
+    {% if post.primary_author.twitter %}
+        <meta name="twitter:creator" content="{{ post.primary_author.twitter }}">
+    {% endif %}
+
+    <meta property="og:image:width" content="{{ post.image_dimensions.feature_image.width }}">
+    <meta property="og:image:height" content="{{ post.image_dimensions.feature_image.height }}">
 {%- endblock -%}
 
 {% block jsonLd %}
