fix: replace orgName with default site title from ghost settings setup

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -81,7 +81,7 @@
     <link rel="amphtml" href="{{ site.url + post.path + "amp/" }}">
 
     <!-- Facebook OpenGraph -->
-    <meta property="og:site_name" content="{{ orgName }}">
+    <meta property="og:site_name" content="{{ site.title }}">
     <meta property="og:type" content="article">
     <meta property="og:title" content="{{ title }}">
     {% if post.excerpt %}
