--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -1,5 +1,3 @@
-{% set orgName = "freeCodeCamp.org" %}
-
 <!DOCTYPE html>
 <html lang="{{ site.lang }}">
     <head>
@@ -53,9 +51,9 @@
 
         {% block seo %}
             <!-- Facebook OpenGraph -->
-            <meta property="og:site_name" content="{{ orgName }}">
+            <meta property="og:site_name" content="{{ site.title }}">
             <meta property="og:type" content="website">
-            <meta property="og:title" content="{{ orgName }}">
+            <meta property="og:title" content="{{ site.title }}">
             <meta property="og:description" content="{% t 'meta:description' %}">
             <meta property="og:url" content="{{site.url + page.url}}">
             <meta property="og:image" content="{{ site.cover_image }}">
@@ -63,7 +61,7 @@
 
             <!-- Twitter Card -->
             <meta name="twitter:card" content="summary_large_image">
-            <meta name="twitter:title" content="{{ orgName }}">
+            <meta name="twitter:title" content="{{ site.title }}">
             <meta name="twitter:description" content="{% t 'meta:description' %}">
             <meta name="twitter:url" content="{{ site.url + page.url }}">
             <meta name="twitter:image" content="{{ site.cover_image }}">
@@ -77,7 +75,7 @@
         {% endblock %}
 
         <meta name="generator" content="Eleventy">
-        <link rel="alternate" type="application/rss+xml" title="{{ orgName }}" href="{{ site.url + "/rss/" }}">
+        <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.url + "/rss/" }}">
 
         {{ site.codeinjection_head | safe if site.codeinjection_head }}
         {{ codeinjection_head | safe if codeinjection_head }}
