--- a/src/_includes/layouts/tag.njk
+++ b/src/_includes/layouts/tag.njk
@@ -55,7 +55,7 @@
     <meta name="twitter:title" content="{{ title }}">
     <meta property="twitter:description" content="{% t 'meta:description' %}">
     <meta name="twitter:url" content="{{ site.url + tag.path }}">
-    <meta property="twitter:image" content="{{ tag.feature_image if tag.cover_image else site.cover_image }}">
+    <meta property="twitter:image" content="{{ tag.feature_image if tag.feature_image else site.cover_image }}">
     <meta name="twitter:site" content="{{ site.twitter }}">
 
     <meta property="og:image:width" content="{{ tag.image_dimensions.feature_image.width if tag.feature_image else site.image_dimensions.cover_image.width }}">
