--- a/src/_includes/layouts/author.njk
+++ b/src/_includes/layouts/author.njk
@@ -1,7 +1,7 @@
 {% extends 'layouts/default.njk' %}
 {% from "partials/card.njk" import card %}
 
-{% set title = author.name + " – " + site.title %}
+{% set title = author.name + " - " + site.title %}
 
 {% block content %}
     {% include "partials/author-info.njk" %}
@@ -21,31 +21,31 @@
 {% endblock %}
 
 {%- block seo -%}
-    <!--Twitter Card-->
-    <meta name="twitter:site" content="{{ site.twitter }}">
-    <meta name="twitter:creator" content="{{ author.twitter }}">
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:url" content="{{ site.url + page.url }}">
-    <meta name="twitter:title" content="{{ title }} – {{ site.title }}">
-    <meta name="twitter:description" content="{{ content }}">
-    <meta name="twitter:image" content="{{ author.profile_image }}">
-
-    <!--Schema-->
-    <link rel="author" href="{{ author.website }}">
-    <link rel="publisher" href="{{ site.url }}">
-    <meta itemprop="name" content="{{ title }} – {{ site.title }}">
-    <meta itemprop="description" content="{{ content }}">
-    <meta itemprop="image" content="{{ author.profile_image }}">
-
     <!-- Facebook OpenGraph -->
-    <meta property="og:url" content="{{ site.url + page.url }}">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="{{ title }} – {{ site.title }}">
-    <meta property="og:image" content="{{ author.profile_image }}">
-    <meta property="og:description" content="{{ content }}">
     <meta property="og:site_name" content="{{ site.title }}">
-    <meta property="og:locale" content="{{ site.lang }}">
-    <meta property="article:author" content="{{ site.url }}">
+    <meta property="og:type" content="profile">
+    <meta property="og:title" content="{{ title }}">
+    <meta property="og:description" content="{% t 'meta:description' %}">
+    <meta property="og:url" content="{{ site.url + author.path }}">
+    <meta property="og:image" content="{{ author.cover_image if author.cover_image else site.cover_image }}">
+    <meta property="article:publisher" content="https://www.facebook.com/freecodecamp">
+    {% if post.primary_author.facebook %}
+        <meta property="article:author" content="{{ post.primary_author.facebook }}">
+    {% endif %}
+
+    <!--Twitter Card-->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="{{ title }}">
+    <meta property="twitter:description" content="{% t 'meta:description' %}">
+    <meta name="twitter:url" content="{{ site.url + author.path }}">
+    <meta property="twitter:image" content="{{ author.cover_image if author.cover_image else site.cover_image }}">
+    <meta name="twitter:site" content="{{ site.twitter }}">
+    {% if author.twitter %}
+        <meta name="twitter:creator" content="{{ post.primary_author.twitter }}">
+    {% endif %}
+
+    <meta property="og:image:width" content="{{ author.image_dimensions.cover_image.width if author.cover_image else site.image_dimensions.cover_image.width }}">
+    <meta property="og:image:height" content="{{ author.image_dimensions.cover_image.height if author.cover_image else site.image_dimensions.cover_image.height }}">
 {%- endblock -%}
 
 {% block jsonLd %}
