--- a/src/search-results.njk
+++ b/src/search-results.njk
@@ -7,7 +7,7 @@ permalink: '/search/'
 {% set codeinjection_head = doc.codeinjection_head %}
 {% set codeinjection_foot = doc.codeinjection_foot %}
 
-{% set title = "Search – " + site.title %}
+{% set title = site.title %}
 
 {% block content %}
     <main id="site-main" class="site-main outer">
@@ -25,3 +25,18 @@ permalink: '/search/'
     {% endset %}
     <script>{{ js | jsMin | safe }}</script>
 {% endblock %}
+
+{%- block seo -%}
+    <!-- Facebook OpenGraph -->
+    <meta property="og:site_name" content="{{ site.title }}">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="{{ site.title }}">
+    <meta property="og:url" content="{{ site.url + permalink }}">
+    <meta property="article:publisher" content="https://www.facebook.com/freecodecamp">
+
+    <!--Twitter Card-->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="{{ site.title }}">
+    <meta name="twitter:url" content="{{ site.url + permalink }}">
+    <meta name="twitter:site" content="{{ site.twitter }}">
+{%- endblock -%}
