fix: use sitemap fetcher for all sitemaps

--- a/src/sitemaps/sitemap-index.njk
+++ b/src/sitemaps/sitemap-index.njk
@@ -6,5 +6,5 @@ eleventyExcludeFromCollections: true
 <?xml-stylesheet type="text/xsl" href="{{ site.url }}/sitemap.xsl"?>
 <sitemapindex
   xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
-    {% siteMapFetcher 'index' %}
+    {% sitemapFetcher 'index' %}
 </sitemapindex>
