--- a/src/sitemaps/sitemap-authors.njk
+++ b/src/sitemaps/sitemap-authors.njk
@@ -7,5 +7,5 @@ eleventyExcludeFromCollections: true
 <urlset
   xmlns="http://www.sitemaps.org/schemas/sitemap/0.9"
   xmlns:image="http://www.google.com/schemas/sitemap-image/1.1">
-    {% siteMapFetcher 'authors' %}
+    {% sitemapFetcher 'authors' %}
 </urlset>
