--- a/src/_includes/layouts/tag.njk
+++ b/src/_includes/layouts/tag.njk
@@ -1,7 +1,7 @@
 {% extends 'layouts/default.njk' %}
 {% from "partials/card.njk" import card %}
 
-{% set title = tag.name + " – " + site.title %}
+{% set title = tag.name + " - " + site.title %}
 {% set postCount = tag.count.posts %}
 {% set popularTags = ghost.popularTags %}
 
@@ -41,30 +41,25 @@
 {% endblock %}
 
 {%- block seo -%}
-    <!--Twitter Card-->
-    <meta name="twitter:site" content="{{ site.twitter }}">
-    <meta name="twitter:creator" content="{{ site.twitter }}">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="{{ site.url + page.url }}">
-    <meta name="twitter:title" content="{{ title }} – {{ site.title }}">
-    <meta name="twitter:description" content="{{ tag.description }}">
-    <meta name="twitter:image" content="{{ tag.feature_image }}">
-
-    <!--Schema-->
-    <link rel="publisher" href="{{ site.url }}">
-    <meta itemprop="name" content="{{ title }} – {{ site.title }}">
-    <meta itemprop="description" content="{{ content }}">
-    <meta itemprop="image" content="{{ tag.feature_image }}">
-
     <!-- Facebook OpenGraph -->
-    <meta property="og:url" content="{{ site.url + page.url }}">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="{{ title }} – {{ site.title }}">
-    <meta property="og:image" content="{{ tag.feature_image }}">
-    <meta property="og:description" content="{{ content }}">
     <meta property="og:site_name" content="{{ site.title }}">
-    <meta property="og:locale" content="{{ site.lang }}">
-    <meta property="article:author" content="{{ site.url }}">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="{{ title }}">
+    <meta property="og:description" content="{% t 'meta:description' %}">
+    <meta property="og:url" content="{{ site.url + tag.path }}">
+    <meta property="og:image" content="{{ tag.feature_image if tag.feature_image else site.cover_image }}">
+    <meta property="article:publisher" content="https://www.facebook.com/freecodecamp">
+
+    <!--Twitter Card-->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="{{ title }}">
+    <meta property="twitter:description" content="{% t 'meta:description' %}">
+    <meta name="twitter:url" content="{{ site.url + tag.path }}">
+    <meta property="twitter:image" content="{{ tag.feature_image if tag.feature_image else site.cover_image }}">
+    <meta name="twitter:site" content="{{ site.twitter }}">
+
+    <meta property="og:image:width" content="{{ tag.image_dimensions.feature_image.width if tag.feature_image else site.image_dimensions.cover_image.width }}">
+    <meta property="og:image:height" content="{{ tag.image_dimensions.feature_image.height if tag.feature_image else site.image_dimensions.cover_image.height }}">
 {%- endblock -%}
 
 {% block jsonLd %}
