--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -85,7 +85,7 @@
     <meta property="og:type" content="article">
     <meta property="og:title" content="{{ title }}">
     {% if post.excerpt %}
-        <meta property="og:description" content="{% createExcerpt post.excerpt %}">
+        <meta property="og:description" content="{{ post.excerpt }}">
     {% endif %}
     <meta property="og:url" content="{{ site.url + post.path }}">
     <meta property="og:image" content="{{ post.feature_image }}">
@@ -103,7 +103,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="{{ title }}">
     {% if post.excerpt %}
-        <meta name="twitter:description" content="{% createExcerpt post.excerpt %}">
+        <meta name="twitter:description" content="{{ post.excerpt }}">
     {% endif %}
     <meta name="twitter:url" content="{{ site.url + post.path }}">
     <meta name="twitter:image" content="{{ post.feature_image }}">
