fix: remove call to settings from .eleventy, pass site object to JSONLD shortcode

--- a/src/_includes/layouts/author.njk
+++ b/src/_includes/layouts/author.njk
@@ -49,5 +49,5 @@
 {%- endblock -%}
 
 {% block jsonLd %}
-    <script type="application/ld+json">{% createJsonLd 'author', author %}</script>
+    <script type="application/ld+json">{% createJsonLd 'author', site, author %}</script>
 {% endblock %}
