--- a/src/_includes/layouts/doc.njk
+++ b/src/_includes/layouts/doc.njk
@@ -98,5 +98,5 @@
 {%- endblock -%}
 
 {% block jsonLd %}
-    <script type="application/ld+json">{% createJsonLd 'article', doc %}</script>
+    <script type="application/ld+json">{% createJsonLd 'article', site, doc %}</script>
 {% endblock %}
