--- a/src/_includes/layouts/tag.njk
+++ b/src/_includes/layouts/tag.njk
@@ -63,5 +63,5 @@
 {%- endblock -%}
 
 {% block jsonLd %}
-    <script type="application/ld+json">{% createJsonLd 'tag', tag %}</script>
+    <script type="application/ld+json">{% createJsonLd 'tag', site, tag %}</script>
 {% endblock %}
