--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -80,7 +80,7 @@
 {%- block seo -%}
     <link rel="amphtml" href="{{ site.url + post.path + "amp/" }}">
 
-    <!-- Facebook OpenGraph -->
+    {# Facebook OpenGraph #}
     <meta property="og:site_name" content="{{ site.title }}">
     <meta property="og:type" content="article">
     <meta property="og:title" content="{{ title }}">
@@ -99,7 +99,7 @@
         <meta property="article:author" content="{{ post.primary_author.facebook }}">
     {% endif %}
 
-    <!--Twitter Card-->
+    {# Twitter Card #}
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="{{ title }}">
     {% if post.excerpt %}
