--- a/src/_includes/layouts/author.njk
+++ b/src/_includes/layouts/author.njk
@@ -21,7 +21,7 @@
 {% endblock %}
 
 {%- block seo -%}
-    <!-- Facebook OpenGraph -->
+    {# Facebook OpenGraph #}
     <meta property="og:site_name" content="{{ site.title }}">
     <meta property="og:type" content="profile">
     <meta property="og:title" content="{{ title }}">
@@ -33,7 +33,7 @@
         <meta property="article:author" content="{{ post.primary_author.facebook }}">
     {% endif %}
 
-    <!--Twitter Card-->
+    {# Twitter Card #}
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="{{ title }}">
     <meta property="twitter:description" content="{% t 'meta:description' %}">
