--- a/src/_includes/layouts/tag.njk
+++ b/src/_includes/layouts/tag.njk
@@ -41,7 +41,7 @@
 {% endblock %}
 
 {%- block seo -%}
-    <!-- Facebook OpenGraph -->
+    {# Facebook OpenGraph #}
     <meta property="og:site_name" content="{{ site.title }}">
     <meta property="og:type" content="website">
     <meta property="og:title" content="{{ title }}">
@@ -50,7 +50,7 @@
     <meta property="og:image" content="{{ tag.feature_image if tag.feature_image else site.cover_image }}">
     <meta property="article:publisher" content="https://www.facebook.com/freecodecamp">
 
-    <!--Twitter Card-->
+    {# Twitter Card #}
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="{{ title }}">
     <meta property="twitter:description" content="{% t 'meta:description' %}">
