--- a/src/search-results.njk
+++ b/src/search-results.njk
@@ -27,14 +27,14 @@ permalink: '/search/'
 {% endblock %}
 
 {%- block seo -%}
-    <!-- Facebook OpenGraph -->
+    {# Facebook OpenGraph #}
     <meta property="og:site_name" content="{{ site.title }}">
     <meta property="og:type" content="website">
     <meta property="og:title" content="{{ site.title }}">
     <meta property="og:url" content="{{ site.url + permalink }}">
     <meta property="article:publisher" content="https://www.facebook.com/freecodecamp">
 
-    <!--Twitter Card-->
+    {# Twitter Card #}
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="{{ site.title }}">
     <meta name="twitter:url" content="{{ site.url + permalink }}">
