--- a/src/_includes/layouts/author.njk
+++ b/src/_includes/layouts/author.njk
@@ -20,7 +20,7 @@
     </main>
 {% endblock %}
 
-{%- block seo -%}
+{% block seo %}
     {# Facebook OpenGraph #}
     <meta property="og:site_name" content="{{ site.title }}">
     <meta property="og:type" content="profile">
@@ -46,7 +46,7 @@
 
     <meta property="og:image:width" content="{{ author.image_dimensions.cover_image.width if author.cover_image else site.image_dimensions.cover_image.width }}">
     <meta property="og:image:height" content="{{ author.image_dimensions.cover_image.height if author.cover_image else site.image_dimensions.cover_image.height }}">
-{%- endblock -%}
+{% endblock %}
 
 {% block jsonLd %}
     <script type="application/ld+json">{% createJsonLd 'author', site, author %}</script>
