--- a/src/_includes/layouts/doc.njk
+++ b/src/_includes/layouts/doc.njk
@@ -54,7 +54,7 @@
     <script>{{ js | jsMin | safe }}</script>
 {% endblock %}
 
-{%- block seo -%}
+{% block seo %}
     <link rel="amphtml" href="{{ site.url + doc.path + "amp/" }}">
 
     {# Facebook OpenGraph #}
@@ -95,7 +95,7 @@
 
     <meta property="og:image:width" content="{{ doc.image_dimensions.feature_image.width }}">
     <meta property="og:image:height" content="{{ doc.image_dimensions.feature_image.height }}">
-{%- endblock -%}
+{% endblock %}
 
 {% block jsonLd %}
     <script type="application/ld+json">{% createJsonLd 'article', site, doc %}</script>
