--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -77,7 +77,7 @@
     <script>{{ js | jsMin | safe }}</script>
 {% endblock %}
 
-{%- block seo -%}
+{% block seo %}
     <link rel="amphtml" href="{{ site.url + post.path + "amp/" }}">
 
     {# Facebook OpenGraph #}
@@ -118,7 +118,7 @@
 
     <meta property="og:image:width" content="{{ post.image_dimensions.feature_image.width }}">
     <meta property="og:image:height" content="{{ post.image_dimensions.feature_image.height }}">
-{%- endblock -%}
+{% endblock %}
 
 {% block jsonLd %}
     <script type="application/ld+json">{% createJsonLd 'article', site, post %}</script>
