fix: cleanup and refactor (#16)
* feat: add version key to ghost api setup, allow nullish coalescing in eslint

* fix: doc meta info

* fix: simplify html minification, disable cache buster plugin, and set up excerpts earlier in build

* fix: simplify logo and cover image handling

* fix: replace chunkArray with lodash's chunk

* fix: add handling for all API keys in .env files, simplify handling of locale a bit

* fix: set site language using env vars, remove site lang handler helper function

* fix: remove call to settings from .eleventy, pass site object to JSONLD shortcode

* fix: remove getReadingTime filter

* fix: simplify site global data and dayjs timezone handling

* fix: simplify ghost API key setting

* fix: client time-ago selector

* fix: increase specificity with eslint ignore comments wherever possible

* fix: add en to English Ghost keys for clarity

* feat: get Ghost API keys dynamically

* fix: bump number of published Chinese articles in search bar

* fix: use meta translation file for rss title and description fields

* fix: conditional handling for zh-cn / zh locales

* fix: initial scale int to float

* fix: swap out html minification packages, increase node memory limit

* fix: pass title to title to image dimention module for error reporting

* fix: refactor pagination and move dynamic pagination link, remove unnecessary HTML comments

* fix: remove optional nunjucks dashes, spacing

* fix: add missing json ld description

* fix: remove conditional for setting logo image

* fix: clarify comments

--- a/src/_includes/layouts/author.njk
+++ b/src/_includes/layouts/author.njk
@@ -20,8 +20,8 @@
     </main>
 {% endblock %}
 
-{%- block seo -%}
-    <!-- Facebook OpenGraph -->
+{% block seo %}
+    {# Facebook OpenGraph #}
     <meta property="og:site_name" content="{{ site.title }}">
     <meta property="og:type" content="profile">
     <meta property="og:title" content="{{ title }}">
@@ -33,7 +33,7 @@
         <meta property="article:author" content="{{ post.primary_author.facebook }}">
     {% endif %}
 
-    <!--Twitter Card-->
+    {# Twitter Card #}
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="{{ title }}">
     <meta property="twitter:description" content="{% t 'meta:description' %}">
@@ -46,8 +46,8 @@
 
     <meta property="og:image:width" content="{{ author.image_dimensions.cover_image.width if author.cover_image else site.image_dimensions.cover_image.width }}">
     <meta property="og:image:height" content="{{ author.image_dimensions.cover_image.height if author.cover_image else site.image_dimensions.cover_image.height }}">
-{%- endblock -%}
+{% endblock %}
 
 {% block jsonLd %}
-    <script type="application/ld+json">{% createJsonLd 'author', author %}</script>
+    <script type="application/ld+json">{% createJsonLd 'author', site, author %}</script>
 {% endblock %}
