--- a/src/_includes/layouts/tag.njk
+++ b/src/_includes/layouts/tag.njk
@@ -40,8 +40,8 @@
     </main>
 {% endblock %}
 
-{%- block seo -%}
-    <!-- Facebook OpenGraph -->
+{% block seo %}
+    {# Facebook OpenGraph #}
     <meta property="og:site_name" content="{{ site.title }}">
     <meta property="og:type" content="website">
     <meta property="og:title" content="{{ title }}">
@@ -50,7 +50,7 @@
     <meta property="og:image" content="{{ tag.feature_image if tag.feature_image else site.cover_image }}">
     <meta property="article:publisher" content="https://www.facebook.com/freecodecamp">
 
-    <!--Twitter Card-->
+    {# Twitter Card #}
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="{{ title }}">
     <meta property="twitter:description" content="{% t 'meta:description' %}">
@@ -60,8 +60,8 @@
 
     <meta property="og:image:width" content="{{ tag.image_dimensions.feature_image.width if tag.feature_image else site.image_dimensions.cover_image.width }}">
     <meta property="og:image:height" content="{{ tag.image_dimensions.feature_image.height if tag.feature_image else site.image_dimensions.cover_image.height }}">
-{%- endblock -%}
+{% endblock %}
 
 {% block jsonLd %}
-    <script type="application/ld+json">{% createJsonLd 'tag', tag %}</script>
+    <script type="application/ld+json">{% createJsonLd 'tag', site, tag %}</script>
 {% endblock %}
